--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Leonel Emilio Ledesma Quintero, Matricula: 2153076603, Santiago">
+    <meta name="description" content="Leonel Emilio Ledesma Quintero, Matricula: 2153076603, Santiago Soto Bulnes, Matricula: 2193035882">
     <title>Campeones Mundiales de Yu-Gi-Oh!</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
